--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,17 @@
     <string name="app_name">Alura Viagens</string>
     <string name="especiais">Especiais</string>
     <string name="pais">Brasil</string>
-    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes</string>
+    <string name="conteudo_do_banner_inicial">Banner inicial dos pacotes\u0020</string>
     <string name="preco_final">Preço final:</string>
     <string name="realizar_pagamento">Realizar pagamento</string>
     <string name="imagem_do_pacote">imagem do pacote</string>
+    <string name="mascara_nome_cartao">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ</string>
+    <string name="valor_compra">Valor da compra:</string>
+    <string name="ano_cartao">AA</string>
+    <string name="numero_cartao">Número do cartão</string>
+    <string name="finalizar_compra">Finalizar compra</string>
+    <string name="mm_cartao">MM</string>
+    <string name="cvc_cartao">CVC</string>
+    <string name="orientacao_pagamento">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
+    <string name="nome_cartao">Nome no cartão</string>
 </resources>
